name:		Win32
version:	2.2.1.0
license:	BSD3
license-file:	LICENSE
author:		Alastair Reid
copyright:	Alastair Reid, 1999-2003
maintainer:	Esa Ilari Vuokko <ei@vuokko.info>
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29
category:	System, Graphics
synopsis:	A binding to part of the Win32 library
build-type:     Simple
cabal-version:  >=1.6
extra-source-files:
	include/diatemp.h include/dumpBMP.h include/ellipse.h include/errors.h
	include/gettime.h include/Win32Aux.h include/win32debug.h

Library
    build-depends:	base >= 3 && < 5, bytestring
    ghc-options:    -Wall -fno-warn-name-shadowing
    cc-options:     -fno-strict-aliasing
    exposed-modules:
        Graphics.Win32.GDI
        Graphics.Win32.GDI.Bitmap
        Graphics.Win32.GDI.Brush
        Graphics.Win32.GDI.Clip
        Graphics.Win32.GDI.Font
        Graphics.Win32.GDI.Graphics2D
        Graphics.Win32.GDI.HDC
        Graphics.Win32.GDI.Palette
        Graphics.Win32.GDI.Path
        Graphics.Win32.GDI.Pen
        Graphics.Win32.GDI.Region
        Graphics.Win32.GDI.Types
        Graphics.Win32
        Graphics.Win32.Control
        Graphics.Win32.Dialogue
        Graphics.Win32.Icon
        Graphics.Win32.Key
        Graphics.Win32.Menu
        Graphics.Win32.Message
        Graphics.Win32.Misc
        Graphics.Win32.Resource
        Graphics.Win32.Window
        System.Win32
        System.Win32.DebugApi
        System.Win32.DLL
        System.Win32.File
        System.Win32.FileMapping
        System.Win32.Info
        System.Win32.Mem
        System.Win32.NLS
        System.Win32.Process
        System.Win32.Registry
        System.Win32.SimpleMAPI
        System.Win32.Time
        System.Win32.Console
        System.Win32.Security
        System.Win32.Types
        System.Win32.Shell
    extensions: ForeignFunctionInterface
    if impl(ghc >= 7.1)
        extensions: NondecreasingIndentation
    extra-libraries:
        "user32", "gdi32", "winmm", "advapi32", "shell32", "shfolder"
    include-dirs: 	include
    includes:	"HsWin32.h", "HsGDI.h", "WndProc.h"
    install-includes:	"HsWin32.h", "HsGDI.h", "WndProc.h"
    c-sources:
        cbits/HsGDI.c
        cbits/HsWin32.c
        cbits/WndProc.c
        cbits/diatemp.c
        cbits/dumpBMP.c
        cbits/ellipse.c
        cbits/errors.c

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/Win32.git/

